--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <script src="../js/jquery.js"></script>
 
     <meta charset="utf-8">
-    <title>Dragons v2.0.1</title>
+    <title>Crannóg v0.0.1</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
