Add equip card screen.

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,11 @@
     </div>
     <div class="row">
         <div class="col-1 leftCtrl"></div>
-        <div class="col-10 gamediv1 "></div>
+        <div class="col-10 gamediv1 hidden"></div>
         <div class="col-1  rightCtrl"></div>
+
+        <div class="col-10 equipCardDiv"></div>
+
     </div>
 </div>
 
