Ignore package.json

--- a/public/index.html
+++ b/public/index.html
@@ -15,33 +15,34 @@
 </head>
 
 <body>
+
+
+    <div class="container">
+
+        <div class="row">
+            <h1 class="tideal col-12">
+                Crannóg
+            </h1>
+        </div>
+
+
+        <div class="row">
+            <h2 class="col-12">version 0.0.1</h2>
+        </div>
+        <div class="row">
+            <div class="col-1 leftCtrl"></div>
+            <div class="col-10 gamediv1 hidden"></div>
+            <div class="col-1  rightCtrl"></div>
+
+            <div class="col-10 equipCardDiv"></div>
+
+        </div>
+    </div>
+
+    <script src="../js/game.js"></script>
+
+
 </body>
-
-<div class="container">
-
-    <div class="row">
-        <h1 class="tideal col-12">
-           Crannóg 
-        </h1>
-    </div>
-
-
-    <div class="row">
-        <h2 class="col-12">version 0.0.1</h2>
-    </div>
-    <div class="row">
-        <div class="col-1 leftCtrl"></div>
-        <div class="col-10 gamediv1 hidden"></div>
-        <div class="col-1  rightCtrl"></div>
-
-        <div class="col-10 equipCardDiv"></div>
-
-    </div>
-</div>
-
-</div>
-
-</div>
 
 
 </html>
