Prepare for project merge.

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="row">
             <div class="col-1 leftCtrl"></div>
-            <div class="col-10 gamediv1">
+            <div class="col-10 gamediv1 hidden">
                 <h1>Crannog</h1>
                 <button type="submit" id="about">About</button>
                 <br>
@@ -48,6 +48,11 @@
 
             <div class="col-10 equipCardDiv hidden"></div>
 
+            <div class="col-10 combatDiv">
+                <h2 class="combatInfo">Round 1: </h2>
+                <div id="playerCard">  </div>
+                <div id="enemyCard">  </div>
+            </div>
         </div>
     </div>
 
