--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             <h2 class="col-sm-12">version 0.0.1</h2>
         </div>
         <div class="row">
-            <div class="col-sm-1 leftCtrl"></div>
+            <div id="btn-left" class="leftCtrl"></div>
             <div class="col-sm-10 gamediv1 hidden">
                 <h1>Crannog</h1>
                 <button type="submit" id="about">About</button>
@@ -52,7 +52,7 @@
             <div class="col-sm-10 equipCardDiv">
 
                 <div class="row">
-                    <div class="col-sm-6">At the moment this div is empty</div>
+                    <div class="col-sm-6" id="equiped">Equiped</div>
 
                     <div class="col-sm-6 carousel slide" id="carousel-card-choose" >
                         <div class="carousel-inner">
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-1  rightCtrl"></div>
+        <div id="btn-right" class="rightCtrl"></div>
     </div>
     </div>
     </div>
