--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         </div> -->
         <div class="row">
 
-            <div class="col-sm-10 gamediv1 ">
+            <div class="col-sm-10 gamediv1 hidden">
                 <h1>Crannog</h1>
                 <button id="play" title="play"></button>
 
@@ -53,18 +53,19 @@
 
 
             <div class="col-sm-10 gamediv2 hidden">
+                    <button id="btnEquipCards" class="hidden" title="choose your cards!"></button>
+
                 <div id="btn-left" class="leftCtrl "></div>
                 <div id="hero"></div>
-                <div id="enemy"></div>
-                <div id="background1"></div>
+                <div id="enemy1"></div>
                 <div id="btn-right" class="rightCtrl"></div>
             </div>
 
 
 
 
-            <div class="col-sm-10 equipCardDiv hidden">
-
+            <div class="col-sm-10 equipCardDiv ">
+                    <div id="card-btn-left" class="leftCtrl "></div>
                 <div class="row">
                     <div class="col-sm-6" id="equiped">Equiped</div>
 
@@ -83,6 +84,8 @@
                     </div>
 
                 </div>
+
+                <div id="card-btn-right" class="rightCtrl"></div>
             </div>
         </div>
        
