--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         </div> -->
         <div class="row">
 
-            <div class="col-sm-10 gamediv1 hidden">
+            <div class="col-sm-10 gamediv1">
                 <h1>Crannog</h1>
                 <button id="play" title="play"></button>
 
@@ -64,14 +64,17 @@
 
 
 
-            <div class="col-sm-10 equipCardDiv ">
+            <div class="col-sm-10 equipCardDiv hidden">
                     <div id="card-btn-left" class="leftCtrl "></div>
                 <div class="row">
-                    <div class="col-sm-6" id="equiped">Equiped</div>
+                    <div class="col-sm-6" id="equiped">
+                  <div class="attackCard"></div>
+                  <div class="defenseCard"></div>
+                        Equiped</div>
 
                     <div class="col-sm-6 carousel slide" id="carousel-card-choose">
                         <div class="carousel-inner">
-                            <div class="item active">
+                            <!-- <div class="item active">
                                 <img class="d-block w-100" src="images/s_001.png" alt="First slide">
                             </div>
                             <div class="item">
@@ -79,7 +82,7 @@
                             </div>
                             <div class="item">
                                 <img class="d-block w-100" src="images/r_001.png" alt="Third slide">
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
