--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,21 @@
 </head>
 
 <body>
+        <script>
+                var audio = new Audio("./audio/GoT8bit1.mp3");
+                var audio = new Audio("./audio/GoT8bit.mp3");
+            </script>
+<div class="buttonMenu">
+        <button id="btnEquipCards" class="hidden  btnStyle" title="choose your cards!"></button>
+        <button id="play" class="btnStyle"title="play"></button>
+
+        <button type="submit" class="btnStyle" id="about" title="about"></button>
+        <br>
+        <br>
+        <div class="about-info" name="about-info" id="aboutInfo" style=""></div>
 
 
+</div>
     <div class="container">
 
 
@@ -40,22 +53,16 @@
         </div> -->
         <div class="row">
 
-            <div class="col-sm-10 gamediv1">
+            <div class="col-sm-12 gamediv1">
                 <h1>Crannog</h1>
-                <button id="play" title="play"></button>
-
-                <button type="submit" id="about" title="about"></button>
-                <br>
-                <br>
-                <div class="about-info" name="about-info" id="aboutInfo" style=""></div>
-
+              
             </div>
 
 
             <div class="col-sm-10 gamediv2 hidden">
-                    <button id="btnEquipCards" class="hidden" title="choose your cards!"></button>
+                   
 
-                <div id="btn-left" class="leftCtrl "></div>
+                <div id="btn-left hidden" class="leftCtrl"></div>
                 <div id="hero"></div>
                 <div id="enemy1"></div>
                 <div id="btn-right" class="rightCtrl"></div>
@@ -96,7 +103,7 @@
     </div>
     </div>
 
-
+<div class="bottomMask"></div>
 </body>
 
 <script src="game.js"></script>
